fixed popover z-index problem

--- a/static/less/popover.less
+++ b/static/less/popover.less
@@ -7,7 +7,7 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  z-index: 1000;
+  z-index: 99;
   min-width: 220px;
   
   &.right {
